Add a new layout for math posts.

--- a/_posts/2022-10-21-bernoulli.html
+++ b/_posts/2022-10-21-bernoulli.html
@@ -1,20 +1,8 @@
 ---
-layout: post
+layout: mathpost
 title: A Derivation of Bernoulli's Equation
 author: Yushun Cheng
 ---
-
-<script>
-  MathJax = {
-      tex: {
-          inlineMath: [['$', '$'], ["\\(", "\\)"]],
-      }
-  };
-</script>
-
-<script id="MathJax-script" async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-</script>
 
 <p>
   This post aims to provide a simple derivation of Bernoulli's equation in
