--- a/content/blogs/bernoulli/index.html
+++ b/content/blogs/bernoulli/index.html
@@ -1,7 +1,7 @@
 ---
-layout: mathpost
 title: A Derivation of Bernoulli's Equation
-author: Yushun Cheng
+date: 2022-10-21
+mathjax: true
 ---
 
 <p>
@@ -15,7 +15,7 @@ author: Yushun Cheng
 </p>
 
 <center>
-  <img src="/images/2022-10-21-bernoulli/cube.svg"/>
+  <img src="cube.svg">
 </center>
 
 <p>
@@ -30,7 +30,7 @@ author: Yushun Cheng
 </p>
 
 <center>
-  <img src="/images/2022-10-21-bernoulli/pressure.svg"/>
+  <img src="pressure.svg">
 </center>
 
 <p>
