--- a/content/blogs/exterior/index.html
+++ b/content/blogs/exterior/index.html
@@ -1,7 +1,7 @@
 ---
-layout: mathpost
 title: An Introduction to Exterior Products
-author: Yushun Cheng
+date: 2022-11-05
+mathjax: true
 ---
 
 <h2> Abstract </h2>
@@ -92,7 +92,7 @@ author: Yushun Cheng
 
   <!-- The diagram of a plane equation. -->
   <center>
-    <img src="/images/2022-11-05-exterior/plane-eq.svg">
+    <img src="plane-eq.svg">
   </center>
 
   Therefore, the locus of vector \(\ve{r}\) should be parallel to the plane of
@@ -107,7 +107,7 @@ author: Yushun Cheng
 
   <!-- The diagram of the distance between a point and a plane. -->
   <center>
-    <img src="/images/2022-11-05-exterior/plane-dist.svg">
+    <img src="plane-dist.svg">
   </center>
 
   when we divide that by \(|\ve{b} \times \ve{c}|\), which is the area of the
@@ -130,7 +130,7 @@ author: Yushun Cheng
 
   <!-- The diagram of a line equation. -->
   <center>
-    <img src="/images/2022-11-05-exterior/line-eq.svg">
+    <img src="line-eq.svg">
   </center>
 
   it is obvious that that vector \(\ve{r}\) should have the same height \(h\)
@@ -144,7 +144,7 @@ author: Yushun Cheng
 
   <!-- The diagram of the distance between a point and a line. -->
   <center>
-    <img src="/images/2022-11-05-exterior/line-dist.svg">
+    <img src="line-dist.svg">
   </center>
 
   If we divide that by the base \(|\ve{b}|\), we are going to get the height
@@ -256,7 +256,7 @@ author: Yushun Cheng
 
   <!-- The diagram of distributive law for determinants. -->
   <center>
-    <img src="/images/2022-11-05-exterior/distributive.svg">
+    <img src="distributive.svg">
   </center>
 
   The heights become hypervolumes when multiplied by the shared base, so
@@ -456,7 +456,7 @@ author: Yushun Cheng
 
   <!-- The diagram of a surface projected onto a plane. -->
   <center>
-    <img src="/images/2022-11-05-exterior/proj_h.svg">
+    <img src="proj_h.svg">
   </center>
 
   Suppose the angle between the object and the space is \(\theta\), then since
@@ -490,7 +490,7 @@ author: Yushun Cheng
 
   <!-- Diagram of a single slice and its projection. -->
   <center>
-    <img src="/images/2022-11-05-exterior/proj_v.svg">
+    <img src="proj_v.svg">
   </center>
 
   \(\lambda\) is projected onto a space of dimension \(m\), one higher than
